--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -35,8 +35,30 @@
     @RenderBody()
 
     <section class="bg-light py-5">
-      <div class="container"
-
+      <div class="container">
+        <h2>Our Programs</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-3"
+              <img src="path/to/program.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Program 1</h5>
+                <p class="card-text">akjdbclajbvkwejbv</p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card mb-3"
+          <img src="path/to/program.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Program 2</h5>
+            <p class="card-text">akjdbclajbvkwejbv</p>
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
       </div>
     </section>
 
