--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -28,8 +28,10 @@
 
     <div class="container my-5">
       <h2>Welcome to Hell University!</h2>
-      <p>weljfnwlojgblwnef</p>
-      <p>bfowbfoqjbfgowbgwhnfiwbqf</p>
+      <p>Congratulations! You've officially entered the gates of eternal knowledge and damnation. At Hell University, we embrace the fiery passion of learning while navigating the treacherous depths of academia. Prepare to have your mind scorched and your intellectual boundaries challenged like never before.</p>
+      <p>Our faculty consists of legendary demons, fallen angels, and tormented souls who are experts in their respective fields. They will guide you through infernal lectures, demonically challenging assignments, and exams that will make your soul tremble.</p>
+      <p>But fear not! We offer an array of extracurricular activities to keep your spirits high, including lava surfing, soul harvesting, and imp petting. Our demonic sports teams, the Hellfire Hurricanes, dominate deadly championships with a relentless fervor.</p>
+      <p>Remember, in Hell University, "C's get degrees, but D's summon demons." Embrace the darkness, kindle the flames of curiosity, and unlock the secrets of the underworld in your pursuit of knowledge. Welcome to the dark realm of higher education!</p>
     </div>
 
     @RenderBody()
@@ -48,17 +50,50 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card mb-3"
-          <img src="path/to/program.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Program 2</h5>
-            <p class="card-text">akjdbclajbvkwejbv</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
+          <div class="col-md-4">
+            <div class="card mb-3"
+              <img src="path/to/program.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Program 2</h5>
+                <p class="card-text">akjdbclajbvkwejbv</p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-3"
+              <img src="path/to/program.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Program 3</h5>
+                <p class="card-text">akjdbclajbvkwejbv</p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="py-5">
+      <div class="container">
+        <h2>Contact us</h2>
+        <p>If you have any questions or inquiries, please contact us.</p>
+        <form>
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+          </div>
+          <div class="col-md-6 mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+          </div>
+          <div class="col-md-6 mb-3">
+              <label for="message" class="form-label">Message</label>
+              <textarea class="form-control" id="message" rows="5" placeholder="Enter your message" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
       </div>
     </section>
 
