--- a/UniversityRegistrar/Views/Students/Edit.cshtml
+++ b/UniversityRegistrar/Views/Students/Edit.cshtml
@@ -4,8 +4,6 @@
 
 @model UniversityRegistrar.Models.Student
 
-<h2>Edit</h2>
-
 <h4>Edit this student: @Html.DisplayFor(model => model.StudentName)</h4>
 
 @using (Html.BeginForm())
@@ -14,6 +12,9 @@
 
   @Html.LabelFor(model => model.StudentName)
   @Html.EditorFor(model => model.StudentName)
+
+  @Html.LabelFor(model => model.EnrollmentDate)
+  @Html.EditorFor(model => model.EnrollmentDate)
 
   @Html.LabelFor(model => model.Course)
   @Html.DropDownList("CourseId")
