--- a/UniversityRegistrar/Views/Students/Index.cshtml
+++ b/UniversityRegistrar/Views/Students/Index.cshtml
@@ -10,13 +10,15 @@
 {
   <h3>No Students have been added yet!</h3>
 } 
-
-@foreach (Student student in Model)
+else
 {
-  <h3>@student.StudentName</h3>
-  <p>@student.EnrollmentDate</p>
-  <p>@Html.ActionLink("Details", "Details", new { id = student.StudentId })</p>
-}
+  @foreach (Student student in Model)
+  {
+    <h3>@student.StudentName</h3>
+    <p>@student.EnrollmentDate</p>
 
+    <p>@Html.ActionLink($"{student.StudentName}", "Details", new { id = student.StudentId })</p>
+  }
+}
 <p>@Html.ActionLink("Add new student", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
