Add working many-to-many relationships b/t courses and students

--- a/UniversityRegistrar/Views/Courses/Details.cshtml
+++ b/UniversityRegistrar/Views/Courses/Details.cshtml
@@ -27,6 +27,7 @@ else
 }
 
 <p>@Html.ActionLink("Back to courses", "Index")</p>
+<p>@Html.ActionLink("Add a Student for this Course", "AddStudent", new { id = Model.CourseId })</p>
 <p>@Html.ActionLink("Edit Course", "Edit", new { id = Model.CourseId })</p>
 <p>@Html.ActionLink("Delete Course", "Delete", new { id = Model.CourseId })</p>
 <p>@Html.ActionLink("Add new student", "Create", "Students")</p>
