--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -2,6 +2,14 @@
   Layout = "_Layout";
 }
 
+<div class="container my-5">
+  <h2>Welcome to Hell University!</h2>
+  <p>Congratulations! You've officially entered the gates of eternal knowledge and damnation. At Hell University, we embrace the fiery passion of learning while navigating the treacherous depths of academia. Prepare to have your mind scorched and your intellectual boundaries challenged like never before.</p>
+  <p>Our faculty consists of legendary demons, fallen angels, and tormented souls who are experts in their respective fields. They will guide you through infernal lectures, demonically challenging assignments, and exams that will make your soul tremble.</p>
+  <p>But fear not! We offer an array of extracurricular activities to keep your spirits high, including lava surfing, soul harvesting, and imp petting. Our demonic sports teams, the Hellfire Hurricanes, dominate deadly championships with a relentless fervor.</p>
+  <p>Remember, in Hell University, "C's get degrees, but D's summon demons." Embrace the darkness, kindle the flames of curiosity, and unlock the secrets of the underworld in your pursuit of knowledge. Welcome to the dark realm of higher education!</p>
+</div>
+
 <h1>Welcome to the University Registar!</h1>
 <h2>Home Page</h2>
 
