--- a/UniversityRegistrar/wwwroot/css/styles.css
+++ b/UniversityRegistrar/wwwroot/css/styles.css
@@ -1,9 +1,8 @@
-div#footer {
+.footer {
 	position:fixed;
-	bottom:0px;
-	left:0px;
-	width:100%;
+	text-align: center;
 	color:#CCC;
 	background:#333;
 	padding:8px;
+	box-sizing: border-box;
 }
