--- a/UniversityRegistrar/Views/Students/Details.cshtml
+++ b/UniversityRegistrar/Views/Students/Details.cshtml
@@ -8,8 +8,8 @@
 <h2>Student Details</h2>
 <hr />
 <h3>Name: @Html.DisplayFor(model => model.StudentName)</h3>
-<h4>Enrollment Date: @Html.DisplayFor(model => model.EnrollmentDate)</h4>    
-<h3>@Html.DisplayNameFor(model => model.Course): @Html.DisplayFor(model => model.Course.CourseName)</h3>
+<h4>Enrollment Date: @Html.DisplayFor(model => model.EnrollmentDate)</h4> 
+@* <h3>@Html.DisplayNameFor(model => model.Course): @Html.DisplayFor(model => model.Course.CourseName)</h3> *@
 
 @if(@Model.JoinEntities.Count == 0)
 {
@@ -27,6 +27,7 @@ else
 }
 
 <p>@Html.ActionLink("Back to students", "Index")</p>
+<p>@Html.ActionLink("Add a Course for this Student", "AddCourse", new { id = Model.StudentId })</p>
 <p>@Html.ActionLink("Edit Student", "Edit", new { id = Model.StudentId })</p>
 <p>@Html.ActionLink("Delete Student", "Delete", new { id = Model.StudentId })</p>
 <p>@Html.ActionLink("Add new Course", "Create", "Courses")</p>
