--- a/UniversityRegistrar/wwwroot/css/styles.css
+++ b/UniversityRegistrar/wwwroot/css/styles.css
@@ -1,8 +1,9 @@
-.footer {
+div#footer {
 	position:fixed;
-	text-align: center;
+	bottom:0px;
+	left:0px;
+	width: 100%;
 	color:#CCC;
 	background:#333;
 	padding:8px;
-	box-sizing: border-box;
 }
