--- a/UniversityRegistrar/Views/Shared/Footer.cshtml
+++ b/UniversityRegistrar/Views/Shared/Footer.cshtml
@@ -1,3 +1,3 @@
-<div class="footer" id="footer">
-  &copy; 2023 Hell University. All rights revoked.
+<div id="footer">
+  <p>&copy; 2023 Hell University. All rights revoked.</p>
 </div>
