--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -9,16 +9,18 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
       crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/styles.css">
+    
   </head>
   <body>
     <header class="bg-primary py-3">
+    
       <div class="container">
         <h1 class="text-white">Hell University</h1>
         <nav>
           <ul class="list-inline">
             <li class="list-inline-item"><a class="text-white" href="/">Home</a></li>
             <li class="list-inline-item"><a class="text-white" href="/">About</a></li>
-            <li class="list-inline-item"><a class="text-white" href="/">Programs</a></li>
+            <li class="list-inline-item"><a class="text-white" href="/Courses">Programs</a></li>
             <li class="list-inline-item"><a class="text-white" href="/">Admissions</a></li>
             <li class="list-inline-item"><a class="text-white" href="/">Contact</a></li>
           </ul>
