--- a/UniversityRegistrar/Views/Students/Create.cshtml
+++ b/UniversityRegistrar/Views/Students/Create.cshtml
@@ -7,7 +7,7 @@
 <h4>Add a new student</h4>
 
 <p>@Html.ValidationMessageFor(model => model.StudentName, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
-<p>@Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
+<!-- <p>@Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p> -->
 
 @using (Html.BeginForm())
 {
@@ -17,9 +17,8 @@
   @Html.LabelFor(model => model.EnrollmentDate)
   @Html.TextBoxFor(model => model.EnrollmentDate)
 
-  @Html.LabelFor(model => model.CourseId)
-  @Html.DropDownList("CategoryId")
-  <!-- @Html.DropDownListFor(model => model.CourseId, ViewBag.CourseId as SelectList, "Select a course") -->
+  <!-- @Html.LabelFor(model => model.CourseId)
+  @Html.DropDownListFor(model => model.CourseId, ViewBag.CourseId as SelectList, "Select a course") -->
 
   <input type="submit" value="Add new student" class="btn btn-primary" />
 }
