--- a/UniversityRegistrar/wwwroot/css/styles.css
+++ b/UniversityRegistrar/wwwroot/css/styles.css
@@ -1,4 +1,4 @@
-div#footer {
+#footer {
 	position:fixed;
 	bottom:0px;
 	left:0px;
@@ -6,4 +6,20 @@ div#footer {
 	color:#CCC;
 	background:#333;
 	padding:8px;
+}
+
+#footer p {
+	margin:0px;
+	padding:0px;
+	text-align: center;
+}
+
+nav {
+	text-align: center;
+	color:#CCC;
+	padding:8px;
+}
+
+.text-white {
+	text-align: center;
 }
