--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
 @{
   Layout = "_Layout";
 }
+<form class="container my-5" action="/search" method="GET">
+  <div class="row">
+    <div class="col-md-6">
+      <input type="text" class="form-control" placeholder="Search for demons or ghouls">
+    </div>
+    <div class="col-md-4">
+      <button type="submit" class="btn btn-primary">Search</button>
+    </div>
+  </div>
+</form>
+
 
 <div class="container my-5">
+
   <h2>Welcome to Hell University!</h2>
   <p>Congratulations! You've officially entered the gates of eternal knowledge and damnation. At Hell University, we embrace the fiery passion of learning while navigating the treacherous depths of academia. Prepare to have your mind scorched and your intellectual boundaries challenged like never before.</p>
   <p>Our faculty consists of legendary demons, fallen angels, and tormented souls who are experts in their respective fields. They will guide you through infernal lectures, demonically challenging assignments, and exams that will make your soul tremble.</p>
@@ -10,13 +22,15 @@
   <p>Remember, in Hell University, "C's get degrees, but D's summon demons." Embrace the darkness, kindle the flames of curiosity, and unlock the secrets of the underworld in your pursuit of knowledge. Welcome to the dark realm of higher education!</p>
 </div>
 
-<h1>Welcome to the University Registar!</h1>
-<h2>Home Page</h2>
+<div class="container my-5">
+  <h1>Welcome to the University Registar!</h1>
+  <h2>Home Page</h2>
 
-<p>@Html.ActionLink("See all students", "Index", "Students")</p> 
-<p>@Html.ActionLink("See all courses", "Index", "Courses")</p>
-<p>@Html.ActionLink("Add new course", "Create", "Courses")</p>
-<p>@Html.ActionLink("Add new student", "Create", "Students")</p>
+  <p>@Html.ActionLink("See all students", "Index", "Students")</p> 
+  <p>@Html.ActionLink("See all courses", "Index", "Courses")</p>
+  <p>@Html.ActionLink("Add new course", "Create", "Courses")</p>
+  <p>@Html.ActionLink("Add new student", "Create", "Students")</p>
+</div>
 
 <section class="bg-light py-5">
       <div class="container">
@@ -26,8 +40,8 @@
             <div class="card mb-3"
               <img src="path/to/program.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Program 1</h5>
-                <p class="card-text">akjdbclajbvkwejbv</p>
+                <h5 class="card-title">Learning Git</h5>
+                <p class="card-text">remember, it only git's better</p>
                 <a href="#" class="btn btn-primary">Learn More</a>
               </div>
             </div>
@@ -36,8 +50,8 @@
             <div class="card mb-3"
               <img src="path/to/program.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Program 2</h5>
-                <p class="card-text">akjdbclajbvkwejbv</p>
+                <h5 class="card-title">Forgetting Git</h5>
+                <p class="card-text">don't forget to git it</p>
                 <a href="#" class="btn btn-primary">Learn More</a>
               </div>
             </div>
@@ -46,8 +60,8 @@
             <div class="card mb-3"
               <img src="path/to/program.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Program 3</h5>
-                <p class="card-text">akjdbclajbvkwejbv</p>
+                <h5 class="card-title">Just Git It</h5>
+                <p class="card-text">and git it good</p>
                 <a href="#" class="btn btn-primary">Learn More</a>
               </div>
             </div>
