--- a/UniversityRegistrar/Views/Shared/_Layout.cshtml
+++ b/UniversityRegistrar/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
           <ul class="list-inline">
             <li class="list-inline-item"><a class="text-white" href="/">Home</a></li>
             <li class="list-inline-item"><a class="text-white" href="/">About</a></li>
-            <li class="list-inline-item"><a class="text-white" href="/Courses">Programs</a></li>
+            <li class="list-inline-item"><a class="text-white" href="/Courses">Course List</a></li>
             <li class="list-inline-item"><a class="text-white" href="/">Admissions</a></li>
             <li class="list-inline-item"><a class="text-white" href="/">Contact</a></li>
           </ul>
